Bug 1131563 - Set the flag skipToNextKeyFrame to false if there is no keyframe behind. r=kinetik, a=sledru